<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/diolog_view"
    android:gravity="center"
    android:layout_gravity="center"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:padding="20dp">
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twomis"
            android:minHeight="50dp"
            android:textSize="16sp"
            android:id="@+id/test"
            />
        <RadioButton
            android:layout_weight="1"
            android:text="@string/thrh"
            android:id="@+id/three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:textSize="16sp"/>
        <RadioButton
            android:layout_weight="1"
            android:text="@string/sixh"
            android:id="@+id/six"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:textSize="16sp"/>
        <RadioButton
            android:layout_weight="1"
            android:text="@string/tentwoh"
            android:id="@+id/half"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:textSize="16sp"/>
        <RadioButton
            android:layout_weight="1"
            android:text="@string/oned"
            android:id="@+id/day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:textSize="16sp"/>
        <RadioButton
            android:layout_weight="1"
            android:text="@string/free"
            android:id="@+id/free"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:textSize="16sp"/>
    </RadioGroup>


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#33000000"
        app:layout_constraintTop_toBottomOf="@+id/free" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginRight="40dp"
            android:textSize="15sp"
            android:text="닫기"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/divider2"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <View
            android:id="@+id/divider2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#33000000"
            app:layout_constraintBottom_toBottomOf="@+id/tv_cancel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <TextView
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginLeft="40dp"
            android:text="확인"
            android:textStyle="bold"
            android:padding="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/divider2"
            app:layout_constraintTop_toBottomOf="@id/divider" />
    </LinearLayout>
</LinearLayout>