<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/task_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#CE4C90BD"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/menu_alram"
        app:title="알람 설정"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Title" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/task_nested_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:fillViewport="true"
        android:scrollbars="none">

        <RelativeLayout
            android:id="@+id/task_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/alram_name"
                android:inputType="textCapSentences"
                android:maxLength="180"
                android:maxLines="1"
                android:minHeight="48dp"
                android:minEms="20"
                android:textCursorDrawable="@null"
                android:textSize="17sp" />



            <ImageView
                android:id="@+id/task_title_divider"
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:layout_below="@+id/task_title"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="12dp"
                android:background="@color/white_gray"
                android:importantForAccessibility="no" />

            <ImageView
                android:id="@+id/task_time_image"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_below="@+id/task_title_divider"
                android:layout_alignTop="@+id/task_time_day_holder"
                android:layout_alignBottom="@+id/task_time_day_holder"
                android:layout_marginStart="12dp"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_access_time_24" />



            <RelativeLayout
                android:id="@+id/task_time_day_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/task_title_divider"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@+id/task_time_image"
                android:background="?attr/selectableItemBackground"
                android:paddingStart="0dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp">



                <TextView
                    android:id="@+id/task_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp"
                    android:textSize="17sp"
                    android:text="2월 00일 (월) "
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/task_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="8dp"
                    android:background="?attr/selectableItemBackground"
                    android:padding="16dp"
                    android:textSize="17sp"
                    android:text="00:00"
                    android:textColor="@color/black"/>
            </RelativeLayout>



            <ImageView
                android:id="@+id/task_caldav_calendar_divider"
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:layout_below="@+id/task_time_day_holder"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:background="@color/white_gray"
                android:importantForAccessibility="no" />

            <ImageView
                android:id="@+id/task_repetition_image"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_below="@+id/task_caldav_calendar_divider"
                android:layout_alignTop="@+id/task_repetition"
                android:layout_alignBottom="@+id/task_repetition"
                android:layout_marginStart="12dp"
                android:padding="8dp"
                android:src="@drawable/ic_repeat" />

            <TextView
                android:id="@+id/task_repetition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/task_caldav_calendar_divider"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@+id/task_repetition_image"
                android:background="?attr/selectableItemBackground"
                android:paddingTop="12dp"
                android:paddingEnd="16dp"
                android:paddingBottom="12dp"
                android:textSize="17sp"
                android:text="@string/no_repeat" />

            <RelativeLayout
                android:id="@+id/task_repetition_rule_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/task_repetition"
                android:layout_alignStart="@+id/task_repetition"
                android:background="?attr/selectableItemBackground"
                android:visibility="gone">

                <TextView
                    android:id="@+id/task_repetition_rule_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="반복"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/task_repetition_rule"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@+id/task_repetition_rule_label"
                    android:clickable="false"
                    android:gravity="end"
                    android:padding="16dp"
                    android:text="@string/days"
                    android:textSize="17sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/task_repetition_limit_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/task_repetition_rule_holder"
                android:layout_alignStart="@+id/task_repetition"
                android:background="?attr/selectableItemBackground"
                android:visibility="gone">

                <TextView
                    android:id="@+id/task_repetition_limit_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/task_repetition_limit"
                    android:clickable="false"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="까지 반복"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/task_repetition_limit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:clickable="false"
                    android:padding="16dp"
                    android:text="계속"
                    android:textSize="17sp" />
            </RelativeLayout>


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>